Fix
Signed-off-by: Geoffroy Jamgotchian <geoffroy.jamgotchian@rte-france.com>